...
    <string name="kicked_user_item_subtitle">탈퇴됨 • %s • %s기</string>
    <string name="anonymous_name">익명%s</string>
    <string name="fail_to_connect">연결에 실패하였습니다.</string>
    <string name="retry">재시도</string>
    <string name="user_image">회원 사진</string>
    <string name="edit_user_image">회원 사진 편집</string>
    <string name="edit">편집</string>
    <string name="delete">삭제</string>
    <string name="edit_post">게시글 편집</string>
    <string name="back">뒤로가기</string>
    <string name="title">제목</string>
    <string name="content">내용</string>
    <string name="save">저장하기</string>
    <string name="admin_page">관리자 페이지</string>
...
    <string name="sorting_by_student_id_ascending">학번 오름차순</string>
    <string name="enter_password">비밀번호를 입력하세요</string>
    <string name="show_password">비밀번호 보이기</string>
    <string name="hide_password">비밀번호 숨기기</string>
    <string name="failed_to_update">수정에 실패했습니다.</string>
    <string name="more_info_button">더보기 버튼</string>
    <string name="comment_info_button">댓글 정보 버튼</string>
    <string name="is_kicked">탈퇴됨</string>
    <string name="create_user">회원 생성</string>
    <string name="type">타입</string>
    <string name="are_you_sure_you_want_to_delete">정말로 삭제하시겠습니까?</string>
    <string name="post_deleted">글이 삭제됨</string>
    <string name="kick_user_recheck_dialog_title">정말로 강퇴하시겠습니까?</string>
    <string name="kick_user_recheck_dialog_text">%s님은 동아리에서 강퇴됩니다.</string>
    <string name="deleted">삭제됨</string>
    <string name="post_by_user_title">%s님의\n글 목록입니다.</string>
    <string name="unknown">알수없음</string>
...
    <string name="password">비밀번호</string>
    <string name="id">아이디</string>
    <string name="are_not_you_member">동아리원이 아니신가요?</string>
    <string name="sign_up_as_anonymous">임시 계정 생성</string>
    <string name="login_title">POCS</string>
    <string name="setting">설정</string>
    <string name="anonymous">익명</string>
    <string name="logout">로그아웃</string>
    <string name="logout_dialog_title">정말로 로그아웃 하시겠습니까?</string>
    <string name="all">전체</string>
    <string name="best">인기</string>
    <string name="writing_time">작성시간</string>
    <string name="reply_count">답글 갯수</string>
    <string name="error_icon">에러 아이콘</string>
    <string name="question_answer">질문답변</string>
    <string name="failed_to_load_comment">댓글을 불러올 수 없습니다</string>
    <string name="add_comment">댓글 추가…</string>
    <string name="add_reply">답글 추가…</string>
    <string name="send_comment">댓글 제출</string>
    <string name="stop">그만두기</string>
    <string name="keep_writing">계속작성</string>
    <string name="stop_writing">작성을 그만둘까요?</string>
    <string name="comment_add_button">댓글 추가 버튼</string>
    <string name="comment_text_field">댓글 입력 창</string>
    <string name="search_by_name">이름 검색</string>
    <string name="query_min_length_error">2글자 이상 입력하세요.</string>
    <string name="views">조회수</string>
    <string name="create">생성하기</string>
    <string name="anonymous_user">익명 회원</string>
    <string name="deleted_comment">삭제된 댓글입니다.</string>
    <string name="comment_added">댓글 추가됨</string>
    <string name="failed_to_add_comment">댓글 추가에 실패함</string>
    <string name="failed_to_edit_comment">댓글 수정 실패함</string>
    <string name="comment_edited">댓글 수정됨</string>
    <string name="comment_deleted">댓글 삭제됨</string>
    <string name="failed_to_delete_comment">댓글 삭제에 실패함</string>
    <string name="failed_to_delete_post">게시글 삭제에 실패함</string>
    <string name="anonymous_guideline">임시 계정은 조회할 수 있는 게시글에 제한이 있어요. 또한 임시 계정으로는 질문 답변 게시글만 작성 가능해요.</string>
    <string name="user_list_only_member">유저 목록(회원 전용)</string>
    <string name="can_see_only_member">회원 전용</string>
    <string name="can_add_comment_only_member">이곳에 댓글은 회원만 작성할 수 있어요.</string>
    <string name="edit_question">질문 수정</string>
    <string name="failed_to_load_image">이미지 로딩 실패</string>
    <string name="remove_profile_image">기본 이미지로 변경</string>
    <string name="choose_from_gallery">갤러리에서 선택</string>
    <string name="profile_image">프로필 사진</string>
...
